# quartz-fabric

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/config-templates/: page.tsx
app/dashboard/devices/: page.tsx
app/dashboard/devices/[id]/: page.tsx
app/dashboard/logs/: page.tsx
app/dashboard/profile/: page.tsx
app/dashboard/settings/: page.tsx
app/dashboard/users/: page.tsx
app/login/: page.tsx
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_settings.sql  003_vlans.sql  004_config_templates.sql  005_environment.sql  006_environment_extended.sql  007_manufacturer.sql  008_rest_api.sql  009_audit_log.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  polling.rs  rest.rs  ssh.rs  state.rs
backend/src/api/: auth.rs  devices.rs  logs.rs  mod.rs  search.rs  settings.rs  templates.rs  users.rs
components/ui/: modal.tsx
lib/: api.ts  auth-context.tsx  theme.ts  toast.tsx
